opam-version:   "1.2"
name:           "ago"
version:        "0.4"
maintainer:     "Christian Lindig <lindig@gmail.com>"
authors:        "Christian Lindig <lindig@gmail.com>"
license:        "BSD"
dev-repo:       "https://github.com/lindig/ocaml-ago.git"
homepage:       "https://github.com/lindig/ocaml-ago"
bug-reports:    "https://github.com/lindig/ocaml-ago/issues"
build:          [["dune" "build" "-p" name "-j" jobs]]
build-test:     [["dune" "runtest" "-p" name "-j" jobs]]
depends: [
  "dune" {build & >= "1.0"}
]
