opam-version: "2.0"
name: "ago"
version: "0.4"
synopsis: "Compute number of days between dates"
description: "Compute number of days between dates"
maintainer: "Christian Lindig <lindig@gmail.com>"
authors: "Christian Lindig <lindig@gmail.com>"
license: "BSD"
homepage: "https://github.com/lindig/ocaml-ago"
bug-reports: "https://github.com/lindig/ocaml-ago/issues"
depends: [
  "dune" {build & >= "1.0"}
]
build: ["dune" "build" "-p" name "-j" jobs]
dev-repo: "git+https://github.com/lindig/ocaml-ago.git"
